--- a/www/new.html
+++ b/www/new.html
@@ -28,9 +28,14 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/main.css" />
         <title>Sample app</title>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript">
     </head>
     <body>
         <div class="app">
-            <div class="bar"></div>
+            <div class="bar">
+                navigator.notification.beep(times);
+            </div>
     </body>
 </html>
