--- a/www/index.html
+++ b/www/index.html
@@ -1,47 +1,56 @@
 <!DOCTYPE html>
-<!--
-    Copyright (c) 2012-2014 Adobe Systems Incorporated. All rights reserved.
-
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Sample App</title>
+        <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+        <title>Sample</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Hi Krzysiek</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device under control of Cordova</p>
-                <p><a href="new.html">Click here to see the app</a></p>
-            </div>
+        <nav>
+            <div class="box">
+            <div class="logo"><a href="#"><img src="android-icon.png" style="height:90px;"></a></div>
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
+        <img class="toggle" src="header-menu.png" onclick="toggle_sidebar()" style="position: fixed; right: 10px; top: 10px"/>
+        <div id="sidebar" style="position: fixed; display: inline-block; height: 100%; width: 200px; left: -200px; background-color: black; transition: all 0.5s ease-in-out;">
+
+            <a href="index.html"><div class="tab"><p style="color:white;padding-top:5%;">Todo List</p></a></div>
+            <a href="animation.html"><div class="tab"><p style="color:white;padding-top:5%;">3DAnimation</p></a></div>
+            <a href="about.html"><div class="tab"><p style="color:white;padding-top:5%;">About</p></a></div>
+            <a href="contact.html"><div class="tab"><p style="color:white;padding-top:5%;">Contact</p></a></div>
+        </div>
+    <script>
+        function toggle_sidebar()
+        {
+            var sidebar = document.getElementById("sidebar");
+            
+            console.log(sidebar.style.left);
+            
+            if(sidebar.style.left == "-200px")
+            {
+                sidebar.style.left = "0px";
+            }
+            else
+            {
+                sidebar.style.left = "-200px";
+            }
+        }
+    </script>
+</nav>
+<div id="container">
+    <div id="wrapper">
+
+            <h1>Todo List</h1>
+<div id-"newTaskSection">
+    <input type="text" id="newTaskInput" placeholder="New Task">
+    <button id="addNewTask">Add</button>
+</div>
+<ul id="taskList">
+</ul>
+</div>
+<script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
