--- a/www/contact.html
+++ b/www/contact.html
@@ -11,6 +11,7 @@
         <img class="toggle" src="header-menu.png" onclick="toggle_sidebar()" style="position: fixed; right: 10px; top: 10px"/>
         <div id="sidebar" style="position: fixed; display: inline-block; height: 100%; width: 200px; left: -200px; background-color: black; transition: all 0.5s ease-in-out;">
 
+        	<a href="index.html"><div class="tab"><p style="color:white;padding-top:5%;">Todo List</p></a></div>
            <a href="animation.html"><div class="tab"><p style="color:white;padding-top:5%;">3DAnimation</p></a></div>
            <a href="about.html"><div class="tab"><p style="color:white;padding-top:5%;">About</p></a></div>
            <a href="contact.html"><div class="tab"><p style="color:white;padding-top:5%;">Contact</p></a></div>
