--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     <body>
         <nav>
             <div class="box">
-            <div class="logo"><a href="#"><img src="android-icon.png" style="height:90px;"></a></div>
+            <div class="logo"><a href="index.html"><img src="android-icon.png" style="height:90px;"></a></div>
         </div>
         <img class="toggle" src="header-menu.png" onclick="toggle_sidebar()" style="position: fixed; right: 10px; top: 10px"/>
         <div id="sidebar" style="position: fixed; display: inline-block; height: 100%; width: 200px; left: -200px; background-color: black; transition: all 0.5s ease-in-out;">
